<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpgradeActivity">

    <TextView
        android:id="@+id/Ubonetxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:text="@string/bones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableStartCompat="@drawable/bonesmall" />

    <TextView
        android:id="@+id/Ubpctxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bonespertap"
        android:textSize="15sp"
        android:textAllCaps="true"
        android:layout_marginStart="15dp"
        app:drawableStartCompat="@drawable/bonexsmall"
        app:layout_constraintBottom_toBottomOf="@+id/Ubonetxt"
        app:layout_constraintStart_toEndOf="@+id/Ubonetxt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592" />

    <ImageButton
        android:id="@+id/ResetMenu"
        style="?android:attr/actionOverflowButtonStyle"
        android:onClick="showPopUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/MainRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="81dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ubonetxt"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="133dp"
        tools:listitem="@layout/item_upgrade_list" />

    <Button
        android:id="@+id/btnUDig"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/digbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/btnUScenery"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/scenerybtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.5" />



</androidx.constraintlayout.widget.ConstraintLayout>